compile_fail_tests/lifetime_4.stderr
error[E0597]: `array_1` does not live long enough
 --> compile_fail_tests/lifetime_4.rs
  |
  |         let array_1 = [1, 2, 3, 4, 5];
  |             ------- binding `array_1` declared here
  |         let slice_1 = DynSlice::<dyn Borrow<i32>>::new(&array_1);
  |                                                        ^^^^^^^^ borrowed value does not live long enough
  |         slice_1.iter().next().unwrap()
  |         ------------------------------ borrow later used here
  |     };
  |     - `array_1` dropped here while still borrowed
